# web-overlay

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: render_150_frames.py
docs/: html_templates.md
src/web_overlay/: __init__.py  browser.py  cli.py  config.py  exceptions.py  frame_capture.py  models.py  overlay.py  renderer.py  setup.py  template.py  webm_encoder.py
tests/: __init__.py  conftest.py  test_animation_determinism.py  test_cleanup.py  test_cli_smoke.py  test_errors.py  test_html_overlay_basic.py  test_html_overlay_dimensions.py  test_inspect_template.py  test_parallel_workers.py  test_regression.py  test_svg_overlay_basic.py  test_swedish_text.py  test_template_substitution.py  test_webm_encoding.py
