[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web-overlay"
dynamic = ["version"]
description = "HTML / CSS / SVG → transparent PNG overlay sequence via Playwright Chromium and ffmpeg"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Trollfabriken AITrix AB", email = "dev@trollfabriken.se" },
]
keywords = ["video", "overlay", "playwright", "html", "svg", "ffmpeg", "chromium", "transparent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "playwright>=1.40",
    "jinja2>=3.1",
    "pydantic>=2.5",
]

[project.optional-dependencies]
arrange = ["video-arrange>=0.1"]
dev = ["pytest>=7", "pytest-asyncio>=0.23", "pytest-cov>=4", "ruff>=0.4", "build", "pillow>=10.0"]

[project.urls]
Homepage = "https://github.com/tomastimelock/web-overlay"
Repository = "https://github.com/tomastimelock/web-overlay"
Issues = "https://github.com/tomastimelock/web-overlay/issues"

[project.scripts]
web-overlay = "web_overlay.cli:main"

[tool.hatch.version]
path = "src/web_overlay/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/web_overlay"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/README.md", "/LICENSE", "/pyproject.toml"]
exclude = ["/tests", "/benchmarks", "/.github", "/specs", "/docs"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B018"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
asyncio_mode = "auto"
markers = [
    "chromium: requires Playwright Chromium installed",
    "ffmpeg: requires ffmpeg binary on PATH",
]

[tool.coverage.run]
source = ["src/web_overlay"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
